# realtest-mcp

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
doc/: spec.md
realtest_mcp/: __init__.py  config.py  results.py  runner.py  server.py  service.py  workspace.py
tests/: live_helpers.py  test_config.py  test_live_realtest.py  test_runner.py  test_server.py  test_service.py  test_workspace.py
tests/fixtures/: error.rts  simple.rts
