[project]
name = "realtest-mcp"
version = "0.1.0"
description = "MCP Server for RealTest backtesting software"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.scripts]
realtest-mcp = "realtest_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-m 'not live'"
markers = [
    "live: exercises the real RealTest executable and local filesystem",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]
